[package]
name = "hanzo_model_discovery"
version = "1.1.10"
edition = "2021"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
regex = "1.10"
percent-encoding = "2.3"

[dev-dependencies]
tokio-test = "0.4"